--- a/infografia.html
+++ b/infografia.html
@@ -104,7 +104,7 @@
         <div class="section section4">
             <h2>link de mi pagina web humildemente</h2>
             <p>Mi pagina es simple, pero espero tu opinion</p>
-            <a href="index.html">pagina</a>
+            <a href="peluchon.github.io">pagina</a>
         </div>
     </div>
 
